# ACM-LSTK

./: Dockerfile  README.md  build.sh
data/E00140/: 1.2.826.0.1.3680043.2.656.1.144.249.dcm.vvi
data/E00140_output/nodule_image/N1/: E00140.N1.vtp
data/E00140_output/nodule_image/N2/: E00140.N2.vtp
src/LungNoduleSegmenter/: CMakeLists.txt  LesionSegmentationCLI.h  LungNoduleSegmentation.cpp  SupersampleVolume.h  example_run_commands  itkLesionSegmentationCommandLineProgressReporter.h  itkLesionSegmentationImageFilterACM.h  itkLesionSegmentationImageFilterACM.hxx  itkLesionSegmentationImageFilterELIC.h  itkLesionSegmentationImageFilterELIC.hxx  itkLungWallFeatureGenerator2.h  itkLungWallFeatureGenerator2.hxx
src/common/: itkVTKViewImageAndSegmentation.cxx  itkVTKViewImageAndSegmentation.h  vtkCutPlaneWidget.cxx  vtkCutPlaneWidget.h
